--- a/mobile-app/src/app/tab1/tab1.page.html
+++ b/mobile-app/src/app/tab1/tab1.page.html
@@ -1,24 +1,19 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Tab 1 </ion-title>
+    <ion-title>RIFT Platform Image Handler</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
   <ion-content>
     <ion-grid>
       <ion-row>
-        <ion-col
-          size="6"
-          *ngFor="let photo of photoService.photos; index as position"
-        >
-          <ion-img [src]="photo.webviewPath" (click)="selectImage(photo)"></ion-img>
+        <ion-col *ngFor="let photo of photoService.photos">
+          <div #refDivEl class="scaled" [@selectItem]="getSelected(photo) ? 'selected' : 'notSelected'">
+            <ion-img [src]="photo.webviewPath" (click)="selectImage(photo)"
+              [ngStyle]="{'opacity': getSelected(photo)? '0.4': '1'}"></ion-img>
+          </div>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -30,11 +25,9 @@
     </ion-fab>
 
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-      <ion-fab-button (click)="addPhotoToGallery()">
-        <ion-icon name="arrow-up"></ion-icon>
+      <ion-fab-button (click)="uploadImages()">
+        <ion-icon name="cloud-upload"></ion-icon>
       </ion-fab-button>
     </ion-fab>
   </ion-content>
-
-
 </ion-content>
