--- a/mobile-app/src/app/tab1/tab1.page.scss
+++ b/mobile-app/src/app/tab1/tab1.page.scss
@@ -1,18 +1,6 @@
-.item-img {
-    --ion-item-background-activated: transparent;
-    --ion-item-background: transparent;
-    --ion-item-background-focused: transparent;
-    --ion-item-background-hover: transparent;
-
-    --ion-item-background-activated: transparent;
-    --background: transparent;
-    --background-activated: transparent;
-    --background-focused: transparent;
-    --background-hover: transparent;
-    background: transparent;
-
-    --background-activated-opacity: 0;
-    --background-focused-opacity: 0;
-    --background-hover-opacity: 0;
-    --transition: none;
+.scaled {
+    width: auto;
+    height: auto;
+    transform-origin: left;
+    transform: scale(1);
 }
