--- a/mobile-app/src/app/tab2/tab2.page.html
+++ b/mobile-app/src/app/tab2/tab2.page.html
@@ -1,36 +1,35 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Video Handler
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <!-- Display the video stream while capturing -->
-  <video class="video" #video autoplay playsinline muted [hidden]="!isRecording"></video>
+  <video class="video" vertical="center" horizontal="center" #video autoplay playsinline muted [hidden]="!isRecording"></video>
 
-  <!-- Neccessary for the video player -->
-  <div id="fullscreen" slot="fixed"></div>
 
-  <ion-list *ngIf="!isRecording">
-    <ion-item *ngFor="let video of videoService.videos;" (click)="play(video)" tappable>
-      {{ video }}
-    </ion-item>
-  </ion-list>
-
-  <ion-grid>
-    <ion-row>
-      <ion-col *ngFor="let video of videoService.videos;" (click)="play(video)" tappable>
-        <div #refDivEl class="scaled" [@selectItem]="'true' ? 'selected' : 'notSelected'">
-          <video #videoTag style="width: 100%; position: absolute;" [autoplay]="true" (click)="play(video)" *ngIf="true">
-            <source [src]=video type="video/mp4">
-          </video>
-        </div>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
+  <ion-content>
+    <ion-grid>
+      <ion-list *ngIf="!isRecording" >
+        <ion-row *ngFor="let video of videoService.videos;" [@selectItem]="getSelected(video) ? 'selected' : 'notSelected'">
+          <ion-col>
+            <ion-item >
+              {{ video }}
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-button color="dark" horizontal="center" (click)="play(video)">Play Video</ion-button>
+          </ion-col>
+          <ion-col>
+            <ion-checkbox color="primary" horizontal="center" (click)="selectVideo(video)"></ion-checkbox>
+          </ion-col>
+        </ion-row>
+      </ion-list>
+    </ion-grid>
+  </ion-content>
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
     <ion-fab-button (click)="isRecording ? stopRecord() : recordVideo()">
       <ion-icon [name]="isRecording ? 'stop' : 'videocam'"></ion-icon>
@@ -48,4 +47,3 @@
       <ion-icon name="cloud-upload"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-</ion-content>
