--- a/mobile-app/android/app/src/main/res/xml/config.xml
+++ b/mobile-app/android/app/src/main/res/xml/config.xml
@@ -2,14 +2,12 @@
 <widget version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
   <access origin="*" />
   
-  <feature name="File">
-    <param name="android-package" value="org.apache.cordova.file.FileUtils"/>
-    <param name="onload" value="true"/>
+  <feature name="Ftp">
+    <param name="android-package" value="io.github.xfally.cordova.plugin.ftp.CDVFtp"/>
   </feature>
 
-  <feature name="PhotoLibrary">
-    <param name="android-package" value="com.terikon.cordova.photolibrary.PhotoLibrary"/>
-    <param name="onload" value="true"/>
+  <feature name="VideoPlayer">
+    <param name="android-package" value="com.moust.cordova.videoplayer.VideoPlayer"/>
   </feature>
 
   
